sfdx_project/force-app/main/default/objects/Log__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <formula>IMAGE(&quot;/resource/&quot; + $Setup.Logger_Settings__c.Namespace__c + &quot;pharos_ds/pharos_ds/icons/category/&quot; + CASE(
Category__c,
&quot;Error&quot;, &quot;error.svg&quot;,
&quot;Warning&quot;, &quot;warning.svg&quot;,
&quot;Debug&quot;, &quot;bug.svg&quot;,
&quot;Event&quot;, &quot;events.svg&quot;,
&quot;Apex&quot;, &quot;apex.svg&quot;,
&quot;Flow&quot;, &quot;flow.svg&quot;,
&quot;Integration&quot;, &quot;apex_plugin.svg&quot;,
&quot;Process Builder&quot;, &quot;all.svg&quot;,
&quot;Email-to-Case&quot;, &quot;case_email.svg&quot;,
&quot;Web-to-Case&quot;, &quot;case.svg&quot;,
&quot;Web-to-Lead&quot;, &quot;lead.svg&quot;,
&quot;Pharos Error&quot;, &quot;pharos.svg&quot;,
&quot;help.svg&quot;)
, TEXT(Category__c), 16, 16)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Icon</label>
    <type>Text</type>
</CustomField>