sfdx_project/force-app/main/default/objects/Log__c/recordTypes/Error.recordType-meta.xml
<RecordType>
    <fullName>Error</fullName>
    <active>true</active>
    <label>Error</label>
</RecordType>