sfdx_project/force-app/main/default/objects/Log__c/recordTypes/Warning.recordType-meta.xml
<RecordType>
    <fullName>Warning</fullName>
    <active>true</active>
    <label>Warning</label>
</RecordType>