sfdx_project/force-app/main/default/objects/Log__c/listViews/TestQueue1_Log.listView-meta.xml
<ListView>
    <fullName>TestQueue1_Log</fullName>
    <filterScope>Queue</filterScope>
    <label>TestQueue1</label>
    <queue>TestQueue1</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>